# npc_market

./: .env  Dockerfile  README.md  hi.txt  next.config.mjs  package-lock.json  package.json  todo.txt
anchor/: Anchor.toml  Cargo.toml
anchor/programs/npc_market/: Cargo.toml
anchor/programs/npc_market/src/: errors.rs  lib.rs
anchor/programs/npc_market/src/instructions/: bid_nft.rs  evolve_nft.rs  initialize_market.rs  mint_npc.rs  mod.rs  sell_nft.rs  store_character.rs  transfer_npc.rs
anchor/programs/npc_market/src/states/: character.rs  initialize.rs  mod.rs
anchor/src/: index.ts  npc_market-exports.ts
anchor/tests/: npc_market.spec.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate-image/: route.ts
src/app/market/: page.tsx
src/app/mint/: page.tsx
src/app/npc_market/: page.tsx
src/app/trade/: page.tsx
src/app/utils/: ipfs.ts
src/components/: Navbar.tsx  bidded-nfts.tsx  chat.tsx  devnet-alert.tsx  nft-update.tsx  nftCard.tsx  theme-mode-toggle.tsx
src/components/npc_market/: npc_market-data-access.tsx  npc_market-feature.tsx  npc_market-ui.tsx
src/components/ui/: alert.tsx  animated-hero.tsx  animated-modal.tsx  nftPriceActions.tsx  ui-layout.tsx
src/store/: nftStore.ts
src/types/: nft.ts
src/utils/: image.ts  ipfs.ts  motion.ts  nft-actions.ts  nft.ts  sol.ts  transfer-sol.ts
