[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program = "=1.16.27"
spl-token-2022 = "=0.8.0"
spl-token = "=3.5.0"
mpl-token-metadata = "=1.13.2"
