[package]
name = "npc_market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "npc_market"

[features]
anchor-debug = [] 
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "=0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.28.0", features = ["metadata"] }
mpl-token-metadata = "=1.13.2"
spl-token = "=3.5.0"
spl-token-2022 = { workspace = true }
switchboard-on-demand = "=0.1.12"
solana-program = { workspace = true }
